--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -92,6 +92,7 @@ title: Index
 For BOSH release producers:
 
 ## Using BOSH to package software (i.e. Creating a BOSH release)
+
  * What is a release?
     * Creating a release
     * Testing with dev releases
@@ -107,6 +108,7 @@ For BOSH release producers:
  * How do releases, jobs, and packages interact?
  * Managing release repository
     * Release blobstore
+       * [Configuring S3 release blobstore](s3-release-blobstore.html)
 
 ---
 ## Deep-dive into stemcell building
