--- a/deployment-basics.html.md.erb
+++ b/deployment-basics.html.md.erb
@@ -116,7 +116,7 @@ networks:
 
 With all pieces combined together most deployment manifests look something like this:
 
-<p class="note">Note: Certain sections (compilation and update) of the deployment manifest were not described. Please see [deployment manifest schema](deployment-manifest.html) for details.</p>
+Note: Certain sections (compilation and update) of the deployment manifest were not described. Please see [deployment manifest schema](deployment-manifest.html) for details.
 
 ```yaml
 name: my-redis-deployment
