--- a/stemcell.html.md.erb
+++ b/stemcell.html.md.erb
@@ -12,6 +12,8 @@ In addition to being generic, stemcells for one OS (e.g. all Ubuntu Trusty stemc
 
 The Cloud Foundry BOSH team is responsible for producing and maintaining an official set of stemcells. Cloud Foundry currently supports Ubuntu Trusty and CentOS 6.5 on vSphere, AWS, OpenStack, and vCloud infrastructures.
 
+Stemcells are distributed as tarballs.
+
 By introducing the concept of a stemcell, the following problems have been solved:
 
 - Capturing a base Operating System image
