--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -5,14 +5,14 @@ title: Index
 ## Introduction
 
  * [What is BOSH?](about.html)
- * [What problems does BOSH solve?](problems.html)
-    * [Stemcell](stemcell.html)
-    * [Release](release.html)
-    * [Deployment](deployment.html)
- * Comparison to other tools
-    * Chef/Puppet
-    * Terraform
-    * Juju
+    * [What problems does BOSH solve?](problems.html)
+       * [Stemcell](stemcell.html)
+       * [Release](release.html)
+       * [Deployment](deployment.html)
+    * Comparison to other tools
+       * Chef/Puppet
+       * Terraform
+       * Juju
  * [Terminology](terminology.html)
 
 ---
@@ -20,17 +20,13 @@ title: Index
 
  * [BOSH components](bosh-components.html)
  * [Boostrapping an environment / What is MicroBOSH?](bootstrap.html)
-    * Local configuration
-    * On Local machine (using bosh-lite)
-       * Compatbility
     * [On AWS](deploy-microbosh-to-aws.html)
-       * Compatbility
        * CloudFormation template
     * [On OpenStack](deploy-microbosh-to-openstack.html)
-       * Compatbility
        * Heat template
     * [On vSphere](deploy-microbosh-to-vsphere.html)
        * Compatbility
+    * [On Local machine using BOSH Lite](bosh-lite.html)
  * BOSH (micro) deploy step-by-step
     * [explanation of every step of the `bosh (micro) deploy` command]
  * Advanced BOSH configuration
@@ -59,7 +55,7 @@ title: Index
     * [VM anti-affinity](vm-anti-affinity.html)
  * [Persistent disks](persistent-disks.html)
  * [Networks](networks.html)
- * CPIs
+ * IaaS specifics
     * [AWS](aws-cpi.html)
     * [OpenStack](openstack-cpi.html)
     * [vSphere](vsphere-cpi.html)
