deploying step by step

--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -29,10 +29,12 @@ title: Index
     * [On Local machine using BOSH Lite](bosh-lite.html)
  * BOSH (micro) deploy step-by-step
     * [explanation of every step of the `bosh (micro) deploy` command]
- * Advanced BOSH configuration
-    * [Connecting BOSH or MicroBOSH to an External Postgres Database](connect-postgres-hadb.html)
-    * Deploying mutli-VM BOSH
-       * Difference between Microbosh, BOSH, and multi-vm BOSH
+
+### Advanced BOSH configuration
+
+ * [Connecting BOSH or MicroBOSH to an External Postgres Database](connect-postgres-hadb.html)
+ * Deploying mutli-VM BOSH
+    * Difference between Microbosh, BOSH, and multi-vm BOSH
 
 ---
 ## Using BOSH to deploy software
@@ -43,11 +45,10 @@ title: Index
     * [Uploading stemcells](uploading-stemcells.html)
     * [Uploading releases](uploading-releases.html)
     * [Deploying](deploying.html)
-    * Deploying software step-by-step
-       * [explanation of every step of the `bosh deploy` command]
-    * Updating deployment to deal with security vulnerabilities
     * Running one off tasks
-  * [Complete BOSH CLI API](sysadmin-commands.html)
+    * Updating deployment to deal with security vulnerabilities
+ * [Deploying step-by-step](deploying-step-by-step.html)
+ * [Complete BOSH CLI API](sysadmin-commands.html)
 
 ### Detailed Deployment Configuration
 
