rearranged bosh cli commands

--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -48,7 +48,7 @@ title: Index
     * Running one off tasks
     * Updating deployment to deal with security vulnerabilities
  * [Deploying step-by-step](deploying-step-by-step.html)
- * [Complete BOSH CLI API](sysadmin-commands.html)
+ * [CLI Commands](sysadmin-commands.html)
 
 ### Detailed Deployment Configuration
 
