--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -1,310 +1,166 @@
 ---
-title: BOSH Commands for System Administration
+title: CLI Commands
 ---
 
-This document lists the fundamental BOSH commands you use to perform system
-administration tasks, categorized by workflow.
+This document lists the all BOSH CLI commands you use to perform system
+administration tasks.
 
-## <a id="general"></a>General Purpose ##
-Use these commands to log into and connect with the BOSH Director.
+---
+## <a id="cluster-operators"></a> For Cluster Operators
 
-<table class="nice" >
-  <tr>
-    <th width=333px>Command</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td><code>login [USERNAME] [PASSWORD]</code></td>
-	<td>Authenticates a user with the BOSH Director when you provide a username
-		and password. Prompts for this information if you omit it.
-	</td>
-  </tr>
-  <tr>
-    <td><code>target [DIRECTOR_URL] [NAME]</code></td>
-	<td>Connects to the BOSH Director URL that you specify for ongoing
-		communication. You can provide <code>NAME</code> to set an alias for the
-		Director.
-		<br />
-        Displays the currently targeted Director if you do not provide a
-		URL.
-	</td>
-  </tr>
-</table>
+Use these commands against the Director to manage deployments and associated assets.
 
-## <a id="cluster"></a>Cluster Management ##
-Use these commands to administer deployment manifests and all aspects of cluster management, such as jobs, errands, tasks, and logs.
+### <a id="user"></a>Director Location
 
-<table class="nice" >
-  <tr>
-    <th width=333px>Command</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td><code>cloudcheck [DEPLOYMENT_NAME] [--auto] [--report]</code></td>
-	<td>Scans for differences between the VM state database that the BOSH
-		Director maintains and the actual state of the VMs. For each difference
-		the scan detects, <code>bosh cloudcheck</code> offers possible repair
-		options.
-	</td>
-  </tr>
-  <tr>
-    <td><code>deployment [FILENAME]</code></td>
-	<td>Instructs the BOSH Director to apply CLI commands against the deployment
-		that the YAML file <code>FILENAME</code> describes.<br />Displays the
-		current deployment if you omit <code>FILENAME</code>.
-	</td>
-  </tr>
-  <tr>
-    <td><code>deployments</code></td>
-	<td>Displays the list of available deployments.</td>
-  </tr>
-  <tr>
-    <td><code>download manifest DEPLOYMENT_NAME [SAVE_AS]</code></td>
-	<td>Downloads and saves the deployment manifest of the
-		<code>DEPLOYMENT_NAME</code> that you specify.
-	</td>
-  </tr>
-  <tr>
-    <td><code>logs JOB [INDEX] [--agent] [--job] [--only filter1,filter2,...] [--all] [--dir DESTINATION_DIRECTORY]</code></td>
-	<td>Fetches a job or agent log from a VM. Supports custom filtering only for
-		job logs.
-	</td>
-  </tr>
-  <tr>
-    <td><code>recreate JOB [INDEX] [--force]</code></td>
-	<td>Stops the job process, power cycles the VM, recreates the job instance,
-		then restarts the job process.
-	</td>
-  </tr>
-  <tr>
-    <td><code>releases [--jobs]</code></td>
-	<td>Displays the list of available releases.
-	</td>
-  </tr>
-  <tr>
-	<td><code>run errand ERRAND_NAME [--download-logs] [--logs-dir DESTINATION_DIRECTORY]</code></td>
-	<td>Instructs the BOSH Director to run the named errand on a job
-		instance on a VM.
-	</td>
-  </tr>
-  <tr>
-    <td><code>ssh [--public_key FILE] [--gateway_host HOST] [--gateway_user USER] [--gateway_identity_file FILE] [--default_password PASSWORD]</code>
-	</td>
-	<td>When you provide arguments with an option flag, the BOSH Director starts
-		an interactive session, passing the specified arguments to a
-		job VM. For example, <code>bosh ssh --public_key mykey.pub</code>
-		instructs the BOSH Director to launch an interactive session with a job
-		VM and pass the specified key to the VM.
-	</td>
-  </tr>
-<tr>
-    <td>
-<code>ssh JOB [INDEX] [COMMANDS]</code>
-	</td>
-	<td>When you provide arguments without an option flag, the Director executes
-		the arguments as commands on the job VM. For example, <code>bosh DEA ssh
-		ls -R</code> runs the <code>ls -R</code> command on the DEA job VM.
-	</td>
-  </tr>
-  <tr>
-    <td><code>status [--uuid]</code></td>
-	<td>Displays the configuration file and deployment manifest in use, and
-		information about the BOSH Director such as name, URL, version, current
-		username, UUID, and CPI.
-	</td>
-  </tr>
-  <tr>
-    <td><code>task [TASK_ID] [--event] [--cpi] [--debug] [--result] [--raw]</code></td>
-	<td>Displays the status of a task that you specify and tracks its output.
-		You can track only one of the following log types at a time: event, CPI,
-		debug, or result. Defaults to event.
-	</td>
-  </tr>
-  <tr>
-    <td><code>tasks [--no-filter] </code></td>
-	<td>Displays a table that lists the following for all currently running
-		tasks: ID number, state, timestamp, user, description, and result.</td>
-  </tr>
-  <tr>
-    <td><code>tasks recent [COUNT] [--no-filter]</code></td>
-	<td>Displays a table that lists the following for the last
-		<code>COUNT</code> tasks: ID number, state, timestamp, user,
-		description, and result. <code>COUNT</code> defaults to 30.
-	</td>
-  </tr>
-  <tr>
-    <td><code>vms [DEPLOYMENT_NAME] [--details] [--dns] [--vitals]</code></td>
-	<td>Displays a table that provides an overview of the VMs in
-		<code>DEPLOYMENT_NAME</code>. You can specify the following options:
-		<br />
-		- <strong>Details</strong>: Includes Cloud ID, Agent ID, and the status
-		of the BOSH Resurrector for each VM.
-		<br />
-		- <strong>DNS</strong>: Includes the DNS A record for each VM.
-		<br />
-		- <strong>Vitals</strong>: Includes load, CPU, memory, swap, system
-		disk, ephemeral disk, and persistent disk usage for each VM.
-    </td>
-  </tr>
-</table>
+`target [DIRECTOR_URL] [ALIAS]`<br/>
+Connects to the Director URL/IP that you specify for ongoing communication. You can provide `ALIAS` to set an alias for the Director. Displays the currently targeted Director if you do not provide a URL.
 
-## <a id="deployment"></a>Deployment Management ##
-Use these commands to create and delete deployments and view task information.
+`login [USERNAME] [PASSWORD]`<br/>
+Authenticates a user with the Director when you provide a username and password. Prompts for this information if you omit it.
 
-<table class="nice" >
-  <tr>
-    <th width=333px>Command</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td><code>delete deployment NAME [--force]</code></td>
-	<td>Deletes job instances, VMs, disks, snapshots, templates, and stemcells.
-	</td>
-  </tr>
-  <tr>
-    <td><code>deploy [--recreate]</code></td>
-	<td>Creates or recreates a deployment.
-	</td>
-  </tr>
-  <tr>
-    <td><code>task [TASK_ID] [--event] [--cpi] [--debug] [--result] [--raw]</code></td>
-	<td>Displays the status of a task that you specify and tracks its output.
-		You can track only one of the following log types at a time: event, CPI,
-		debug, or result. Defaults to event.
-	</td>
-  </tr>
-  <tr>
-    <td><code>tasks [--no-filter]</code></td>
-	<td>Displays a table that lists the following for all currently running
-		tasks: ID number, state, timestamp, user, description, and result.
-	</td>
-  </tr>
-  <tr>
-    <td><code>tasks recent [COUNT] [--no-filter]</code></td>
-	<td>Displays a table that lists the following for the last
-		<code>COUNT</code> tasks: ID number, state, timestamp, user,
-		description, and result. <code>COUNT</code> defaults to 30.
-	</td>
-  </tr>
-</table>
+`status [--uuid]`<br/>
+Displays the configuration file and deployment manifest in use, and information about the BOSH Director such as name, URL, version, current username, UUID, and CPI.
 
-## <a id="lifecycle"></a>Lifecycle Management ##
-Use these commands to manage releases, stemcells, and snapshots.
+---
+### <a id="user"></a>Users
 
-<table class="nice" >
-  <tr>
-    <th width=333px>Command</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td><code>create release [MANIFEST_FILE] [--force] [--final] <br />[--with-tarball] [--dry-run] [--version VERSION]
-</code></td>
-	<td>Creates a release.</td>
-  </tr>
-  <tr>
-    <td><code>delete release NAME [VERSION] [--force]</code></td>
-	<td>Deletes a release and associated jobs, packages, compiled packages, and
-		all package metadata.
-		Fails if a deployment references this release.
-	</td>
-  </tr>
-  <tr>
-    <td><code>delete snapshot SNAPSHOT_CID</code></td>
-	<td>Deletes a snapshot.
-	</td>
-  </tr>
-  <tr>
-    <td><code>delete snapshots</code></td>
-	<td>Deletes all snapshots.</td>
-  </tr>
-  <tr>
-    <td><code>delete stemcell NAME VERSION [--force]</code></td>
-	<td>Deletes a stemcell and all associated compiled packages. Fails if a
-		deployment references this stemcell.
-	</td>
-  </tr>
-  <tr>
-    <td><code>download public stemcell STEMCELL_FILENAME</code></td>
-	<td>Downloads the stemcell that you specify from the public blobstore.
-	</td>
-  </tr>
-  <tr>
-    <td><code>public stemcells [--full] [--all]</code></td>
-	<td>Displays a list of available public stemcells.
-	</td>
-  </tr>
-  <tr>
-    <td><code>snapshots</code></td>
-	<td>Displays the job, CID, and created date of all snapshots.
-	</td>
-  </tr>
-  <tr>
-    <td><code>stemcells</code></td>
-	<td>Displays the name, version, and CID of available stemcells.
-	</td>
-  </tr>
-  <tr>
-    <td><code>take snapshot [JOB] [INDEX]</code></td>
-	<td>Takes a snapshot of the job VM that you specify.<br />
-		If you do not specify a <code>JOB</code>, takes a snapshot of every VM
-		in your deployment.
-	</td>
-  </tr>
-  <tr>
-    <td><code>upload release [RELEASE_FILE] [--rebase] [--skip-if-exists]</code></td>
-	<td>Uploads the file that you specify as a release. If you do not provide a
-		<code>RELEASE_FILE</code>, you must run this command from a valid
-		release directory.
-	</td>
-  </tr>
-  <tr>
-    <td><code>upload stemcell STEMCELL_LOCATION [--skip-if-exists]
-</code></td>
-	<td>Uploads the stemcell that you specify. You must specify a URI if the
-		<code>STEMCELL_LOCATION</code> is remote.
-	</td>
-  </tr>
-</table>
+Use these commands to create and delete users on the Director.
 
-## <a id="release"></a>Release Creation ##
-Use these commands to create releases and upload blobs.
+`create user [USERNAME] [PASSWORD]`<br/>
+Creates a user with the Director. Prompts you for a `USERNAME` and `PASSWORD` if you omit this information.
 
-<table class="nice" >
-  <tr>
-    <th width=333px>Command</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td><code>create release [MANIFEST_FILE] [--force] [--final] [--with-tarball] [--dry-run] [--version VERSION]</code></td>
-	<td>Creates a release.
-	</td>
-  </tr>
-  <tr>
-    <td><code>upload blobs</code></td>
-	<td>Uploads new and updated blobs to the blobstore.
-	</td>
-  </tr>
-</table>
+`delete user [USERNAME]`
+Deletes a specific user from the BOSH Director. Prompts you for a `USERNAME` if you omit this information.
 
-## <a id="user"></a>User Management ##
-Use these commands to create and delete users from the BOSH Director.
+---
+### <a id="dir-release"></a> Releases
 
-<table border="1" class="nice" >
-  <tr>
-    <th width=333px>Command</th>
-    <th>Description</th>
-  </tr>
-  <tr>
-    <td><code>create user [USERNAME] [PASSWORD]</code></td>
-	<td>Creates a user with the BOSH Director. Prompts you for a
-		<code>USERNAME</code> and <code>PASSWORD</code> if you omit this
-		information.
-	</td>
-  </tr>
-  <tr>
-    <td><code>delete user [USERNAME]</code></td>
-	<td>Deletes a specific user from the BOSH Director. Prompts you for a
-		<code>USERNAME</code> if you omit this information.
-	</td>
-  </tr>
-</table>
+`releases [--jobs]`<br/>
+Displays the list of available releases.
+
+`upload release [RELEASE_FILE] [--rebase] [--skip-if-exists]`<br/>
+Uploads the file that you specify as a release. If you do not provide a `RELEASE_FILE`, you must run this command from a valid release directory.
+
+`delete release NAME [VERSION] [--force]`<br/>
+Deletes a release and associated jobs, packages, compiled packages, and all package metadata. Fails if a deployment references this release.
+
+---
+### <a id="dir-stemcells"></a> Stemcells
+
+`stemcells`<br/>
+Displays the name, version, and CID of available stemcells.
+
+`upload stemcell STEMCELL_LOCATION [--skip-if-exists]`<br/>
+Uploads the stemcell that you specify. `STEMCELL_LOCATION` can be a local file path or a remote URL.
+
+`delete stemcell NAME VERSION [--force]`<br/>
+Deletes a stemcell and all associated compiled packages. Fails if any deployment references this stemcell.
+
+`public stemcells [--full] [--all]`<br/>
+Displays a list of available public stemcells. Alternatively use [BOSH Artifacts](http://bosh-artifacts.cfapps.io) to see all available stemcells.
+
+`download public stemcell STEMCELL_FILENAME`<br/>
+Downloads the stemcell that you specify from the public blobstore to the machine running the CLI.
+
+---
+### <a id="deployment"></a> Deployment
+
+`deployments`<br/>
+Displays the list of created deployments on the Director. Shows stemcells and releases used by each deployment.
+
+`deployment [FILE_PATH]`<br/>
+Switches the CLI to operate on the deployment specified by the deployment manifest `FILE_PATH`. Displays the current deployment if you omit `FILENAME`.
+
+`deploy [--recreate]`<br/>
+Creates/updates or recreates a deployment.
+
+`download manifest DEPLOYMENT_NAME [FILE_PATH]`<br/>
+Downloads and saves the deployment manifest of the deployment `DEPLOYMENT_NAME` to `FILE_PATH`.
+
+`delete deployment DEPLOYMENT_NAME [--force]`<br/>
+Deletes job instances, VMs, disks, snapshots, templates associated with the deployment `DEPLOYMENT_NAME`.
+
+---
+### <a id="health"></a> Job/VM Health
+
+`vms [DEPLOYMENT_NAME] [--details] [--dns] [--vitals]`<br/>
+Displays a table that provides an overview of the VMs in `DEPLOYMENT_NAME`. You can specify the following options:
+
+- **Details**: Includes Cloud ID, Agent ID, and the status of the BOSH Resurrector for each VM.
+- **DNS**: Includes the DNS A record for each VM.
+- **Vitals**: Includes load, CPU, memory, swap, system disk, ephemeral disk, and persistent disk usage for each VM.
+
+`recreate JOB [INDEX] [--force]`<br/>
+Stops the job process, power cycles the VM, recreates the job instance, then restarts the job process.
+
+`cck [DEPLOYMENT_NAME] [--auto] [--report]`<br/>
+Scans for differences between the VM state database that the Director maintains and the actual state of the VMs. For each difference the scan detects, `bosh cck` offers possible repair options.
+
+---
+### <a id="tasks"></a> Director Tasks
+
+`tasks [--no-filter] `<br/>
+Displays a table that lists the following for all _currently running_ tasks: ID number, state, timestamp, user, description, and result.
+
+`tasks recent [COUNT] [--no-filter]`<br/>
+Displays a table that lists the following for the last `COUNT` tasks: ID number, state, timestamp, user, description, and result. `COUNT` defaults to 30.
+
+`task [TASK_ID] [--event] [--cpi] [--debug] [--result] [--raw]`<br/>
+Displays the status of a task that you specify and tracks its output. You can track only one of the following log types at a time: event, CPI, debug, or result. Defaults to event.
+
+---
+### <a id="ssh"></a> SSH
+
+`ssh [--public_key FILE] [--gateway_host HOST] [--gateway_user USER] [--gateway_identity_file FILE] [--default_password PASSWORD]`<br/>
+When you provide arguments with an option flag, the BOSH Director starts an interactive session, passing the specified arguments to a job VM. For example, `bosh ssh --public_key mykey.pub` instructs the BOSH Director to launch an interactive session with a job VM and pass the specified key to the VM.
+
+`ssh JOB [INDEX] [COMMANDS]`<br/>
+When you provide arguments without an option flag, the Director executes the arguments as commands on the job VM. For example, `bosh redis ssh ls -R` runs the `ls -R` command on the redis job VM.
+
+---
+### <a id="logs"></a> Logs
+
+`logs JOB [INDEX] [--agent] [--job] [--only filter1,filter2,...] [--all] [--dir DESTINATION_DIRECTORY]`<br/>
+Fetches a job or agent log from a VM. Supports custom filtering only for job logs.
+
+---
+### <a id="errand"></a> Errands
+
+`errands`<br/>
+Displays a table that lists all available errands for the set deployment.
+
+`run errand ERRAND_NAME [--download-logs] [--logs-dir DESTINATION_DIRECTORY]`<br/>
+Instructs the BOSH Director to run the named errand on a job instance on a VM.
+
+---
+### <a id="snapshots"></a> Snapshots
+
+`snapshots`<br/>
+Displays the job, CID, and created date of all snapshots.
+
+`delete snapshots`<br/>
+Deletes all snapshots.
+
+`delete snapshot SNAPSHOT_CID`<br/>
+Deletes a snapshot.
+
+`take snapshot [JOB] [INDEX]`<br/>
+Takes a snapshot of the job VM that you specify. If you do not specify a `JOB`, takes a snapshot of every VM in your deployment.
+
+---
+## <a id="release-maintainers"></a> For Release Maintainers
+
+Use these commands against to create/update releases.
+
+### <a id="main-release"></a> Release Creation
+
+`create release [MANIFEST_FILE] [--force]`<br/>
+Creates a dev release.
+
+`create release [MANIFEST_FILE] --final [--version VERSION] [--with-tarball] [--force] `<br/>
+Creates a final release.
+
+### <a id="blobs"></a> Blobs
+
+`upload blobs`<br/>
+Uploads new and updated blobs to the blobstore.
